# QuietCaption-Studio

./: .gitignore  AGENTS.md  LICENSE  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  subtitle generator plan
.github/workflows/: windows-release.yml
.superpowers/sdd/: progress.md  task-1-transcription-beam-runtime-brief.md
docs/superpowers/plans/: 2026-07-11-full-product-expansion.md  2026-07-11-quietcaption-studio.md  2026-07-14-compute-device-fallback-runtime.md  2026-07-14-model-lifecycle-serialization.md  2026-07-14-model-move-byte-verification.md  2026-07-14-queue-runtime-snapshot-readiness.md  2026-07-14-settings-schema-hardening.md  2026-07-14-transcription-beam-runtime.md
packaging/: build.ps1  entrypoint.py  installer.iss  quietcaption.spec  real_inference_smoke.py  smoke.ps1
src/quietcaption/: __init__.py  app.py  atomic_files.py  demo.py  diagnostics.py  domain.py  downloads.py  editor_session.py  filesystem_lock.py  formats.py  hardware.py  languages.py  media.py  model_operation_lock.py  model_service.py  models.py  pipeline.py  projects.py  settings.py  setup.py  transcription.py  translation.py
src/quietcaption/ui/: __init__.py  drop_zone.py  editor.py  (+7 more)
tests/: test_atomic_files.py  test_control_contract.py  test_domain.py  test_editor_persistence_ui.py  test_editor_session.py  test_formats.py  test_languages.py  test_model_service.py  test_package.py  test_persistence.py  test_pipeline.py  test_pipeline_collisions.py  test_product_ui.py  test_runtime.py  test_settings_schema.py  test_setup.py  test_translation.py  test_ui.py
(+2 files in other folders)
